--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+    - name: Create dir to cover test cases
+      run: |
+        mkdir generated_maps
     - name: Install dependencies
       run: |
         sudo apt-get install -y wkhtmltopdf
